--- a/src/composer.json
+++ b/src/composer.json
@@ -6,5 +6,13 @@
             "email": "joaomagdaleno.14@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "phpmailer/phpmailer": "^6.0"
+    },
+    "autoload":{
+        "psr-4": {
+            "App\\":"../app/",
+            "Src\\":"../src/"
+        }
+    }
 }
