--- a/src/composer.json
+++ b/src/composer.json
@@ -12,6 +12,8 @@
     "autoload":{
         "psr-4": {
             "App\\":"../app/",
+            "Classes\\":"../class/",
+            "Traits\\":"../traits/",
             "Src\\":"../src/"
         }
     }
