--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ /public/index.php?url=$1 [QSA,L]
+RewriteRule ^(.*)$ /MVC/public/index.php?url=$1 [QSA,L]
