atulização nos nomes das pastas

--- a/src/composer.json
+++ b/src/composer.json
@@ -17,7 +17,7 @@
             "Traits\\":"../traits/",
             "Src\\":"../src/",
             "Interfaces\\":"../Interfaces/",
-            "Model\\":"../Model/"
+            "Models\\":"../Models/"
         }
     }
 }
