--- a/src/composer.json
+++ b/src/composer.json
@@ -14,6 +14,7 @@
         "psr-4": {
             "Classes\\":"../class/",
             "App\\":"../app/",
+            "Controllers\\":"../controllers/",
             "Traits\\":"../traits/",
             "Src\\":"../src/",
             "Interfaces\\":"../Interfaces/",
